tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__main_block.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"\n        main {\n            echo 10\n        }\n    \").unwrap()"
---
Statement(
    [
        Main(
            (),
            (),
            [
                Echo(
                    (),
                    Number(
                        10.0,
                    ),
                ),
            ],
            (),
        ),
    ],
)
