tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__modulo-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 % 2 % 3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Modulo(
                    Modulo(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Number(
                        3.0,
                    ),
                ),
            ),
        ),
    ],
)
