tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__multiply-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 * 2 * 3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Multiply(
                    Multiply(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Number(
                        3.0,
                    ),
                ),
            ),
        ),
    ],
)
