tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__multiply.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 * 2\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Multiply(
                    Number(
                        1.0,
                    ),
                    (),
                    Number(
                        2.0,
                    ),
                ),
            ),
        ),
    ],
)
