tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__mults_and_adds-3.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 / 2 + 3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Add(
                    Divide(
                        Number(
                            1.0,
                        ),
                        (),
                        Number(
                            2.0,
                        ),
                    ),
                    (),
                    Number(
                        3.0,
                    ),
                ),
            ),
        ),
    ],
)
