tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__mults_and_adds-4.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"1 - 2 / 3\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Subtract(
                    Number(
                        1.0,
                    ),
                    (),
                    Divide(
                        Number(
                            2.0,
                        ),
                        (),
                        Number(
                            3.0,
                        ),
                    ),
                ),
            ),
        ),
    ],
)
