tests/grammar/snapshots/amber_lsp__tests__grammar__alpha034__nameof-2.snap
---
source: src/tests/grammar/alpha034.rs
expression: "parse(\"nameof nameof variable\").unwrap()"
---
Statement(
    [
        Statement(
            Expression(
                Nameof(
                    (),
                    Nameof(
                        (),
                        VariableGet(
                            Variable(
                                "variable",
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ],
)
